k8s/ingress/7tv-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 7tv-ingress
  namespace: 7tv
spec:
  rules:

    - host: api.7tv.app
      http:
        paths:
          - path: /v2/ws
            pathType: Exact
            backend:
              service:
                name: seventv-wsapi-svc
                port:
                  number: 80

    - host: api.7tv.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seventv-nodeapi-svc
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: seventv-goapi-svc
                port:
                  number: 80
          - path: /egvault
            pathType: Prefix
            backend:
              service:
                name: seventv-egvault-svc
                port:
                  number: 80

    - host: 7tv.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seventv-webapp-svc
                port:
                  number: 80

    - host: stage.7tv.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seventv-webapp-stage-svc
                port:
                  number: 80

    - host: stage-cf.7tv.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seventv-webapp-stage-svc
                port:
                  number: 80

    - host: api-stage.7tv.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seventv-stageapi-svc
                port:
                  number: 80

    - host: egvault-stage.7tv.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seventv-egvault-stage-svc
                port:
                  number: 80
              
    - host: egvault.7tv.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seventv-egvault-svc
                port:
                  number: 80

  tls:
    - hosts:
        - 7tv.app
        - api.7tv.app
        - registry.7tv.app
